# pmpp-tu-2014

./: README.md
PMPP14_ex1_negro_marco/: .project  CMakeLists.txt  matrix.h  matrixMul.cpp  matrixMul_cpu.cpp  matrixMul_gpu.cu  matrixMul_gpu.h
PMPP14_ex2_negro_marco/: .cproject  .project  CMakeLists.txt  common.cpp  common.h  convolution_cpu.cpp  convolution_cpu.h  convolution_gpu_cmem.cu  convolution_gpu_cmem.h  convolution_gpu_final.cu  convolution_gpu_final.h  convolution_gpu_gmem.cu  convolution_gpu_gmem.h  convolution_gpu_smem.cu  convolution_gpu_smem.h  convolution_gpu_tmem.cu  convolution_gpu_tmem.h  gaussFilter.cpp  ppm.cpp  ppm.h
PPMP14_ex1_negro_marco/: .cproject
PPMP14_ex2_negro_marco/: common.cpp  common.h  gaussFilter.cpp  ppm.cpp
ex1/: CMakeLists.txt  common.h  matrix.cpp  matrix.h  matrixMul.cpp  matrixMul_cpu.cpp  matrixMul_cpu.h  matrixMul_gpu.cu  matrixMul_gpu.h  timer.h
